# nche

./: .gitignore  CLI.md  OPS.md  READCODE.md  README.md  SPEC.md  TODO.md  TODO_NEW_VALUE_PROP.md  nche.yaml.example
backend/: README.md
backend/nche/: .env.example  Cargo.toml
backend/nche/.cargo/: config.toml
backend/nche/migrations/: 001_initial.sql  002_add_archived.sql  003_add_internal_domains.sql  004_execution_webhook.sql  005_policy_webhook.sql
backend/nche/scripts/: build-release.sh
backend/nche/src/: config.rs  error.rs  lib.rs  main.rs
backend/nche/src/api/: auth.rs  mod.rs  records.rs
backend/nche/src/dashboard/: mod.rs
backend/nche/src/db/: actions.rs  agents.rs  approvals.rs  cases.rs  dashboard.rs  documents.rs  events.rs  links.rs  mod.rs  sessions.rs  tasks.rs  tenants.rs  webhooks.rs
backend/nche/src/domain/: mod.rs  state_machine.rs
backend/nche/src/executor/: mod.rs
backend/nche/src/policy/: email.rs  http.rs  mod.rs  schema.rs  webhook.rs
backend/nche/src/webhooks/: mod.rs
backend/nche/tests/: api_test.rs  db_test.rs  webhook_test.rs
backend/nche/tests/common/: mod.rs
docs/: SELF_HOSTED.md  WEBHOOKS.md
examples/nodejs/: package.json  tenant-webhook-server.js
examples/python/: agent_anthropic.py  agent_openai.py  nche_client.py  requirements.txt  tenant_webhook_server.py
examples/rust/: Cargo.toml
examples/rust/src/: agent_anthropic.rs  agent_openai.rs  nche_client.rs
examples/scenarios/: email_approved.sh  email_denied.sh  full_workflow.sh
frontend/: next.config.ts  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/actions/: page.tsx
frontend/src/app/(dashboard)/actions/detail/: page.tsx
frontend/src/app/(dashboard)/approvals/: page.tsx
frontend/src/app/(dashboard)/approvals/detail/: page.tsx
frontend/src/app/(dashboard)/audit/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/approvals/: approval-card.tsx  approve-dialog.tsx
frontend/src/components/common/: action-status-badge.tsx  event-timeline.tsx  json-viewer.tsx  tool-badge.tsx
frontend/src/components/layout/: header.tsx  shell.tsx  sidebar.tsx
frontend/src/lib/: api.ts  hooks.ts  providers.tsx  store.ts  utils.ts
frontend/src/types/: index.ts
