[package]
name = "nche"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nche"
path = "src/main.rs"

[lib]
name = "nche"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "time", "json", "migrate", "tls-rustls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Time handling
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# ID generation
nanoid = "0.4"

# Password hashing
argon2 = "0.5"

# Error handling
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP client (for webhooks and http_request tool)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Email (SMTP support)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport", "pool"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# HMAC for webhook signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Static file embedding
rust-embed = "8"
mime_guess = "2"

# URL parsing (for tool validation)
url = "2"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }

# Release build optimizations
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Minimal binary size profile
[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
strip = true
