[package]
name = "nche-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent_anthropic"
path = "src/agent_anthropic.rs"

[[bin]]
name = "agent_openai"
path = "src/agent_openai.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
